added images and icons, update original app and index

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,109 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+
+/*Paper ----------------------------------*/
+canvas, canvas[resize] {
+    width: 100%;
+    height: 95vh;
+}
+
+.paperscript .canvas {
+    line-height: 0;
+}
+
+#canvas {
+	
+	z-index: -1;
+	top: 0;
+
+}
+
+.cartoon {
+	width: 25%;
+	right: 75vh;
+	position: absolute;
+	z-index: 50;
+	top: 150px;
+	display: block;
+	padding: 10px;
+  	margin: auto;
+  	align-content: center;
+}
+
+.cartoon-image {
+	background: url(images/cartoonshot2.png);
+	height: 300px;
+	width: 320px;
+	margin: auto;
+	display: block;
+	background-size: cover;
+	-webkit-filter: drop-shadow(5px 5px 5px #29335C);
+  	filter: drop-shadow(5px 5px 5px #29335C); 
+}
+
+.cartoon-title {
+	position: absolute;
+	height: 50px;
+	/*width: 45%;*/
+	width: 100%;
+	display: block;
+	padding: 20px;
+	text-align: center;
+	/*color: #E8818D;*/
+	color: #A33C49;
+	font-size: 48px;
+	/*left: 27%;*/
+	top: 30%;
+	left: 320px;
+	
+	}
+
+.cartoon-title p {
+	/*width: 25%;*/
+	padding: 30px;
+	border-width: 4px;
+	/*border-color: #E8818D;*/
+	/*border-color: #F3C0C6;*/
+	border-color: #A33C49;
+	border-style: solid;
+	border-radius: 5px;
+	/*background-color: #E5717F;*/
+	background-color: #F3C0C6;
+
+}
+
+/*.cartoon-title p {
+  animation-duration: 2s;
+  animation-name: slideout;
+}
+
+@keyframes slideout {
+  from {
+    margin-left: 20%;
+    width: 0%;
+    opacity: 0;
+
+  }
+
+  to {
+    margin-right: 110%;
+    width: 100%;
+    opacity: 1;
+    transition: opacity 5s linear; 
+  }
+}*/
+
+.cartoon-title p {
+    -webkit-animation: fadeinout 7s linear forwards;
+    animation: fadeinout 7s linear forwards;
+    opacity: 0;
+}
+
+@-webkit-keyframes fadeinout {
+  50% { opacity: 1; 
+		animation-delay: 2s;
+  }
+}
+
+@keyframes fadeinout {
+  50% { opacity: 1;} 
+		
 }
