--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ canvas, canvas[resize] {
 }
 
 .cartoon-image {
-	background: url(images/cartoonshot2.png);
+	/*background: url(images/cartoonshot2.png);*/
 	height: 300px;
 	width: 320px;
 	margin: auto;
